add token apis
